@@ -156,6 +156,7 @@ Docking+Viewports Branch:
 
 - Fixed an assert in background dimming code, which could trigger after using
   gamepad/keyboard to move a window to another viewport. (#9053) [@lut0pia, @ocornut]
+- Fixed implicit/fallback "Debug" window from staying visible if once docked. (#9151)
 - Backends:
   - Win32: viewports created by backend forcefully direct messages to
     DefWindowProcW() in order to support Unicode text input. (#9099, #3653, #5961) [@ulhc]
